@@ -60,7 +60,7 @@ der Maus bedient werden. Dem Ungeduldigen empfehlen wir, den »Sprache«-Knopf
 zu klicken, um Eure Sprache einzustellen; anschließend den Knopf namens
 »Einführung«, um die Einführung zu spielen; und dann spielt die Kampagne
 »Die Geschichte zweier Brüder« durch das Klicken des »Kampagnen«-Knopfs mit
-anschließender Auswahl aus der folgenden Liste.</p><p><span class="inlinemediaobject"><img src="images/main-menu-1.5.11.jpg" alt="Main Menu" /></span></p><div class="variablelist"><dl><dt><span class="term">
+anschließender Auswahl aus der folgenden Liste.</p><p><span class="inlinemediaobject"><img src="images/de/main-menu-1.5.11.jpg" alt="Hauptmenü" /></span></p><div class="variablelist"><dl><dt><span class="term">
 Einführung
 </span></dt><dd>
  Die Einführung ist ein echtes aber einfaches Spiel, das einige der Grundzüge
@@ -196,7 +196,7 @@ Wochen dauern, selbst wenn die tatsächliche Spielzeit nur wenige Stunden
 beträgt. Ihr könnt im Mehrspielermodus keine Einheiten von einem Szenario in
 das nächste übernehmen, daher ist es nur innerhalb des Szenarios möglich,
 die Stärke Eurer Armee auszubauen.</p><p>Es gibt mehrere Wahlmöglichkeiten, die Euch geboten werden, wenn der
-»Mehrspieler«-Knopf benutzt wird:</p><p><span class="inlinemediaobject"><img src="images/multiplayer-1.5.11.jpg" alt="Multiplayer dialog" /></span></p><div class="section" title="1.3.2.1. Euer Name"><div class="titlepage"><div><div><h4 class="title"><a id="_login"></a>1.3.2.1. Euer Name</h4></div></div></div><p>Dies ist Ihr Name auf dem Mehrspieler Server. Wenn Ihr einen Account im
+»Mehrspieler«-Knopf benutzt wird:</p><p><span class="inlinemediaobject"><img src="images/de/multiplayer-1.5.11.jpg" alt="Mehrspieler Dialog" /></span></p><div class="section" title="1.3.2.1. Euer Name"><div class="titlepage"><div><div><h4 class="title"><a id="_login"></a>1.3.2.1. Euer Name</h4></div></div></div><p>Dies ist Ihr Name auf dem Mehrspieler Server. Wenn Ihr einen Account im
 <a class="ulink" href="http://www.wesnoth.org/forum" target="_top">Wesnoth Forum</a> habt, so
 könnt Ihr den Nutzernamen und das zugehörige Passwort benutzen, um mit
 diesen Daten den Server zu betreten. Wählt Ihr einen bereits registrierten
@@ -239,12 +239,12 @@ werden, bevor Ihr gegen menschliche Gegner antretet. Es kann auch dazu
 verwendet werden, die Fähigkeiten von Einheiten der verschiedensten
 Fraktionen in diesen Spielen auszutesten. Natürlich könnt Ihr auch beides in
 einem Spiel mischen, also gemeinsam mit einem Freund in einem Spiel gegen
-einen Computergegner anzutreten.</p></div></div><div class="section" title="1.3.3. Der Spielbildschirm"><div class="titlepage"><div><div><h3 class="title"><a id="game_screen"></a>1.3.3. Der Spielbildschirm</h3></div></div></div><p><span class="inlinemediaobject"><img src="images/game-screen-1.5.7.jpg" alt="Game Screen" /></span></p><p>Unabhängig davon ob Ihr ein Szenario oder eine Kampagne spielt, die
+einen Computergegner anzutreten.</p></div></div><div class="section" title="1.3.3. Der Spielbildschirm"><div class="titlepage"><div><div><h3 class="title"><a id="game_screen"></a>1.3.3. Der Spielbildschirm</h3></div></div></div><p><span class="inlinemediaobject"><img src="images/de/game-screen-1.5.7.jpg" alt="Spielbildschirm" /></span></p><p>Unabhängig davon ob Ihr ein Szenario oder eine Kampagne spielt, die
 grundsätzliche Anordnung des Spielbildschirmes ist die gleiche. Den Großteil
 des Bildes umfasst eine Karte, die die gesamten Handlungen anzeigt, die im
 Spiel stattfinden. Um die Karte herum gibt es verschiedene Elemente, die
 nützliche Informationen über das Spiel bieten und in folgendem genauer
-beschrieben werden.</p><p><span class="inlinemediaobject"><img src="images/top_pane-1.5.7.jpg" alt="Top Panel" /></span></p><p>Am oberen Rand des Schirmes finden sich von links nach rechts folgende
+beschrieben werden.</p><p><span class="inlinemediaobject"><img src="images/de/top_pane-1.5.7.jpg" alt="Oberer Bildschirmrand" /></span></p><p>Am oberen Rand des Schirmes finden sich von links nach rechts folgende
 Teile:</p><div class="orderedlist"><ol class="orderedlist" type="1"><li class="listitem">
 Menü-Knopf
 </li><li class="listitem">
@@ -270,7 +270,7 @@ Verteidigung und Bewegung der aktuell gewählten Einheit auf dem markierten
 Feld
 </li><li class="listitem">
 Aktueller Geländetyp des Feldes
-</li></ol></div><p><span class="inlinemediaobject"><img src="images/right_pane-1.5.7.jpg" alt="Right Panel" /></span></p><p>Den rechten Rand hinunter von oben nach unten findet sich:</p><div class="orderedlist"><ol class="orderedlist" type="1"><li class="listitem">
+</li></ol></div><p><span class="inlinemediaobject"><img src="images/de/right_pane-1.5.7.jpg" alt="Rechter Bildschirmrand" /></span></p><p>Den rechten Rand hinunter von oben nach unten findet sich:</p><div class="orderedlist"><ol class="orderedlist" type="1"><li class="listitem">
 Komplette Karte, skaliert
 </li><li class="listitem">
 Anzeige der Tageszeit
@@ -549,7 +549,7 @@ weiteres Goldstück pro Dorf, das von der Seite kontrolliert wird. In einer
 Kampagne ist das Startgold der größere Betrag von 80% des übrig gebliebenen
 Goldes des vorhergehenden Szenarios und einer minimalen Anzahl, die im
 Szenario selbst festgelegt ist, die üblicherweise geringer ausfällt, wenn
-der Schwierigkeitslevel höher ist.</p><div class="section" title="2.2.1. Ausbildung und Einberufung"><div class="titlepage"><div><div><h3 class="title"><a id="_recruiting_and_recalling"></a>2.2.1. Ausbildung und Einberufung</h3></div></div></div><p><span class="inlinemediaobject"><img src="images/recruit-1.5.7.jpg" alt="Recruit dialog" /></span></p><p>Die Hauptverwendung des Goldes ist es, Eure Armee aufzubauen, indem Ihr neue
+der Schwierigkeitslevel höher ist.</p><div class="section" title="2.2.1. Ausbildung und Einberufung"><div class="titlepage"><div><div><h3 class="title"><a id="_recruiting_and_recalling"></a>2.2.1. Ausbildung und Einberufung</h3></div></div></div><p><span class="inlinemediaobject"><img src="images/de/recruit-1.5.7.jpg" alt="Ausbilden Dialog" /></span></p><p>Die Hauptverwendung des Goldes ist es, Eure Armee aufzubauen, indem Ihr neue
 Einheiten ausbildet oder Einheiten von vorangegangenen Szenarien in einer
 Kampagne einberuft. Einheiten können dann ausgebildet oder einberufen
 werden, wenn sich Euer Anführer in einem Burgfried einer Burg befindet, die
@@ -571,7 +571,7 @@ d.h. der Anführer und jene, die freiwillig beitreten – besitzen in der Regel
 die Loyal-Charakteristik. Unterhalt wird nur bezahlt, falls der gesamte
 Unterhalt der Einheiten einer Seite größer als die Anzahl der Dörfer ist,
 die die Seite kontrolliert. Der zu zahlende Unterhalt beläuft sich auf den
-Unterschied zwischen der Anzahl an Dörfern und den Unterhaltskosten.</p></div><div class="section" title="2.2.3. Einkommen"><div class="titlepage"><div><div><h3 class="title"><a id="_income"></a>2.2.3. Einkommen</h3></div></div></div><p>Die Formel für die Berechnung der Einnahmen pro Zug ist daher</p><pre class="literallayout">2 + villages - maximum(0, upkeep - villages)</pre><p>wobei Unterhalt gleich der Summe der Stufen aller Eurer nicht-loyalen
+Unterschied zwischen der Anzahl an Dörfern und den Unterhaltskosten.</p></div><div class="section" title="2.2.3. Einkommen"><div class="titlepage"><div><div><h3 class="title"><a id="_income"></a>2.2.3. Einkommen</h3></div></div></div><p>Die Formel für die Berechnung der Einnahmen pro Zug ist daher</p><pre class="literallayout">2 + Dörfer - Maximum(0, Unterhalt - Dörfer)</pre><p>wobei Unterhalt gleich der Summe der Stufen aller Eurer nicht-loyalen
 Einheiten ist.</p><p>Falls die Unterhaltkosten größer als die Anzahl der Dörfer plus zwei sind,
 beginnt die Seite, Gold zu verlieren, falls sie gleich sind, gibt es weder
 Einkommen noch Verlust.</p></div></div><div class="section" title="2.3. Einheiten"><div class="titlepage"><div><div><h2 class="title" style="clear: both"><a id="_units"></a>2.3. Einheiten</h2></div></div></div><p>Battle for Wesnoth besitzt hunderte Einheitentypen, die sich durch einen
@@ -956,7 +956,7 @@ Ergebnis des Angriffs abhängig: Falls eine Einheit einen Gegner tötet,
 erhält sie 8 Erfahrungspunkte pro Stufe des Gegners (4, falls es ein Gegner
 der Stufe 0 ist), während Einheiten, die einen Kampf überleben, ohne ihren
 Gegner zu töten, einen Erfahrungspunkt pro Stufe des Gegners erhalten. In
-anderen Worten:</p><div class="table"><a id="id313753"></a><p class="title"><b>Tabelle 2.3. Erfahrungsboni für besiegte oder bekämpfte Gegner unterschiedlicher Stufe</b></p><div class="table-contents"><table summary="Erfahrungsboni für besiegte oder bekämpfte Gegner unterschiedlicher Stufe" cellpadding="4px" style="border-collapse: collapse;border-top: 2px solid #527bbd; border-bottom: 2px solid #527bbd; "><colgroup><col align="left" /><col align="left" /><col align="left" /></colgroup><thead><tr><th style="" align="left">
+anderen Worten:</p><div class="table"><a id="id313754"></a><p class="title"><b>Tabelle 2.3. Erfahrungsboni für besiegte oder bekämpfte Gegner unterschiedlicher Stufe</b></p><div class="table-contents"><table summary="Erfahrungsboni für besiegte oder bekämpfte Gegner unterschiedlicher Stufe" cellpadding="4px" style="border-collapse: collapse;border-top: 2px solid #527bbd; border-bottom: 2px solid #527bbd; "><colgroup><col align="left" /><col align="left" /><col align="left" /></colgroup><thead><tr><th style="" align="left">
     Stufe des Gegners
     </th><th style="" align="left">
     Tötungsbonus
@@ -1045,7 +1045,7 @@ gegnerische Kontrollzonen ignorieren und sich frei durch sie hinwegbewegen,
 ohne angehalten zu werden. Einheiten der Stufe 0 werden als zu schwach
 angesehen, um eine Kontrollzone zu beherrschen und alle Einheiten können
 sich frei durch Felder bewegen, die eine Stufe-0-Einheit umgeben.</p></div><div class="section" title="2.4.2. Sphären"><div class="titlepage"><div><div><h3 class="title"><a id="orbs"></a>2.4.2. Sphären</h3></div></div></div><p>An der Spitze des Energiebalkens neben jeder Eurer Einheiten befindet sich
-eine Sphäre. Diese Sphäre ist:</p><div class="table"><a id="id314026"></a><p class="title"><b>Tabelle 2.4. Sphären</b></p><div class="table-contents"><table summary="Sphären" cellpadding="4px" style="border-collapse: collapse;border-top: 2px solid #527bbd; border-bottom: 2px solid #527bbd; "><colgroup><col align="left" /><col align="left" /><col align="left" /></colgroup><thead><tr><th style="" align="left">
+eine Sphäre. Diese Sphäre ist:</p><div class="table"><a id="id314028"></a><p class="title"><b>Tabelle 2.4. Sphären</b></p><div class="table-contents"><table summary="Sphären" cellpadding="4px" style="border-collapse: collapse;border-top: 2px solid #527bbd; border-bottom: 2px solid #527bbd; "><colgroup><col align="left" /><col align="left" /><col align="left" /></colgroup><thead><tr><th style="" align="left">
     Sphären
     </th><th style="" align="left">
     Bild
@@ -1054,33 +1054,33 @@ eine Sphäre. Diese Sphäre ist:</p><div class="table"><a id="id314026"></a><p c
     </th></tr></thead><tbody><tr><td style="" align="left">
     Grün
     </td><td style="" align="left">
-    <span class="inlinemediaobject"><img src="images/orb-green.jpg" alt="Green orb" /></span>
+    <span class="inlinemediaobject"><img src="images/orb-green.jpg" alt="Grüne Sphäre" /></span>
     </td><td style="" align="left">
     Wenn Ihr die Einheit kontrolliert und diese Runde noch nicht bewegt habt
     </td></tr><tr><td style="" align="left">
     Gelb
     </td><td style="" align="left">
-    <span class="inlinemediaobject"><img src="images/orb-yellow.jpg" alt="Yellow orb" /></span>
+    <span class="inlinemediaobject"><img src="images/orb-yellow.jpg" alt="Gelbe Sphäre" /></span>
     </td><td style="" align="left">
     Wenn Ihr die Einheit kontrolliert und sie in dieser Runde bereits bewegt
 wurde, aber noch weiter bewegen oder angreifen könnte
     </td></tr><tr><td style="" align="left">
     Rot
     </td><td style="" align="left">
-    <span class="inlinemediaobject"><img src="images/orb-red.jpg" alt="Red orb" /></span>
+    <span class="inlinemediaobject"><img src="images/orb-red.jpg" alt="Rote Sphäre" /></span>
     </td><td style="" align="left">
     Wenn Ihr die Einheit kontrolliert und sie sich bereits vollständig bewegt
 hat
     </td></tr><tr><td style="" align="left">
     Blau
     </td><td style="" align="left">
-    <span class="inlinemediaobject"><img src="images/orb-blue.jpg" alt="Blue orb" /></span>
+    <span class="inlinemediaobject"><img src="images/orb-blue.jpg" alt="Blaue Sphäre" /></span>
     </td><td style="" align="left">
     Falls die Einheit ein Verbündeter ist, den Ihr nicht kontrolliert
     </td></tr><tr><td style="" align="left">
     -
     </td><td style="" align="left">
-    <span class="inlinemediaobject"><img src="images/orb-none.jpg" alt="No orb" /></span>
+    <span class="inlinemediaobject"><img src="images/orb-none.jpg" alt="Keine Sphäre" /></span>
     </td><td style="" align="left">
     Gegnerische Einheiten haben keine Sphären über ihrem Energiebalken
     </td></tr></tbody></table></div></div><br class="table-break" /></div><div class="section" title="2.4.3. Ellipsen, Teammarkierungen und Heldanzeiger"><div class="titlepage"><div><div><h3 class="title"><a id="_ellipses_team_colors_and_hero_icons"></a>2.4.3. Ellipsen, Teammarkierungen und Heldanzeiger</h3></div></div></div><p>Unter jeder Einheit gibt es üblicherweise eine farbliche Ellipse oder
