@@ -4,7 +4,7 @@ changelog: http://svn.gna.org/viewcvs/*checkout*/wesnoth/trunk/changelog
 
 Version 1.7.12+svn:
  * Language and i18n:
-   * Updated translations: Finnish.
+   * Updated translations: Finnish, German.
 
 
 Version 1.7.12-1.8beta5:
