@@ -1,6 +1,8 @@
 1.7.12+svn:
  * Language and i18n:
-   * Updated translations: Finnish
+   * Updated translations: Finnish, German
+   * The manual now does support translations of alternative texts for images
+     (bug #14874)
 
 1.7.12-1.8beta5:
  * AI
